--- a/secciones/inicio/home.css
+++ b/secciones/inicio/home.css
@@ -3,3 +3,4 @@
 @import url("./colors.css");
 @import url("../../styles/animations.css");
 @import url("../../styles/colors.css");
+@import url("../../styles/modulos/botones.css");
