--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,7 @@
 @import url("./variables_fuentes_textos_colores.css");
 @import url("./fuentes_y_textos.css");
 @import url("./colors.css");
-
+@import url("./modulos/botones.css");
 /* Otros estilos */
 .column {
 	flex: 1;
