--- a/styles/test_y_fase_beta/variables_fuentes_textos_colores.css
+++ b/styles/test_y_fase_beta/variables_fuentes_textos_colores.css
@@ -31,7 +31,7 @@
 	--color-menu-principal: #00e5ee;
 	--color-menu-principal-secundario: #c0c0c0;
 	--color-principal: #007bff;
-	--color-primertexto: #ffffff;
+	--color-texto: #ffffff;
 	--color-segundotexto: #90e0ef;
 	--color-subtitulo: #caf0f8;
 	--color-titulo: #ffffff;
