--- a/styles/util/colores.css
+++ b/styles/util/colores.css
@@ -4,7 +4,7 @@
 	--color-primary: #00c3ff;
 	--color-secondary: #04182f;
 	--color-titulo: #ffffff;
-	--color-primertexto: #ffffff;
+	--color-texto: #ffffff;
 	--color-segundotexto: #9acbff;
 	--color-tercertexto: #00629e;
 	--color-sombratexto: #001119;
