--- a/secciones/proyectos/proyectos.css
+++ b/secciones/proyectos/proyectos.css
@@ -1,7 +1,6 @@
 @import url("../../styles/variables.css");
 /* Estilos generales para la sección de proyectos */
 .contenedor__proyectos {
-	max-width: 100%;
 	margin: 0 auto; /* Centra el contenedor */
 	padding: 2rem;
 }
@@ -20,6 +19,7 @@
 	border-radius: var(--borde-reducido);
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	overflow: hidden;
+	height: 40rem;
 	transition: box-shadow 0.3s ease;
 	background: linear-gradient(
 		18deg,
@@ -28,12 +28,12 @@
 		var(--color-paleta-principal3, rgba(4, 37, 78, 1)) 60%,
 		var(--color-paleta-principal4, rgba(1, 14, 18, 0.2))
 	);
-	background-color: var(--color-background, #fff);
-	height: auto; /* Ajusta la altura según el contenido */
+	/* Ajusta la altura según el contenido */
 }
 
 .proyecto:hover {
 	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+	background-color: var(--color-hover);
 }
 
 /* Estilo para el título del proyecto */
@@ -45,7 +45,7 @@
 
 /* Estilo para la imagen del proyecto */
 .proyecto__img {
-	width: 50%;
+	width: 35%;
 	height: auto;
 	border-bottom: 1px solid var(--color-border, #ccc);
 	border-radius: var(--borde-grande);
@@ -61,7 +61,7 @@
 	max-height: 10rem; /* Ajusta la altura máxima */
 	overflow: hidden;
 	transition: max-height 0.5s ease;
-	color: var(--color-primertexto);
+	color: var(--color-texto);
 	text-align: justify;
 	width: 100%;
 	margin-top: 1rem; /* Añade margen superior */
