--- a/secciones/sobre_mi/sobre_mi.css
+++ b/secciones/sobre_mi/sobre_mi.css
@@ -2,12 +2,13 @@
 
 /* .about-box: Contenedor de la sección "Acerca de" */
 .about-box {
-	color: var(--color-primertexto);
+	color: var(--color-texto);
 	display: flex;
 	flex-wrap: wrap;
 	gap: 1rem;
 	align-items: stretch;
 	text-shadow: 1px 1px 1px var(--color-paleta-principal5);
+	font-size: var(--medida-texto);
 }
 
 /* .about-column: Información Personal */
@@ -113,7 +114,7 @@
 
 /* .about-box: Contenedor de la sección "Acerca de" */
 .about-box {
-	color: var(--color-primertexto);
+	color: var(--color-texto);
 	display: flex;
 	flex-wrap: wrap;
 	gap: 1rem;
