--- a/styles/movil.css
+++ b/styles/movil.css
@@ -4,11 +4,11 @@
 		font-size: var(--medida-titulo); /* Reducir ligeramente el tamaño */
 	}
 
-	.titulo span {
+	.titulo h1 span {
 		font-size: var(--medida-titulo-extra-grande); /* Ajustar el tamaño de las letras grandes */
 	}
 	.doble_altura iframe {
-		height: 90vh; /* Ocupa el 200% de la altura del viewport en pantallas pequeñas */
+		height: 95vh; /* Ocupa el 200% de la altura del viewport en pantallas pequeñas */
 	}
 }
 
@@ -18,28 +18,28 @@
 	.titulo h1 {
 		font-size: 4.5rem;
 		word-break: break-all; /* Fuerza el salto de línea en cualquier punto de la palabra */
-		width: 100%;
+		width: 120%;
 	}
 
-	.titulo span {
+	.titulo h1 span {
 		font-size: 5.5rem;
 	}
-	.doble_altura iframe {
-		height: 110vh; /* Ocupa el 200% de la altura del viewport en pantallas pequeñas */
+	iframe {
+		height: 140vh; /* Ocupa el 200% de la altura del viewport en pantallas pequeñas */
 	}
 }
 
 @media (max-width: 768px) {
 	/* Para tablets pequeñas y dispositivos móviles */
 	.titulo h1 {
-		font-size: 5.5rem;
+		font-size: 4.8rem;
 	}
 
-	.titulo span {
-		font-size: 6rem;
+	.titulo h1 span {
+		font-size: 5rem;
 	}
-	.doble_altura iframe {
-		height: 120vh; /* Ocupa el 200% de la altura del viewport en pantallas pequeñas */
+	iframe {
+		height: 160vh; /* Ocupa el 200% de la altura del viewport en pantallas pequeñas */
 	}
 }
 
@@ -49,28 +49,34 @@
 		font-size: 3.5rem;
 	}
 
-	.titulo span {
+	.titulo h1 span {
 		font-size: 4.5rem;
 	}
-	.doble_altura iframe {
-		height: 130vh; /* Ocupa el 200% de la altura del viewport en pantallas pequeñas */
+	.titulo h5 span {
+		font-size: 3rem;
+	}
+	iframe {
+		height: 170vh; /* Ocupa el 200% de la altura del viewport en pantallas pequeñas */
 	}
 }
 
 @media (max-width: 375px) {
 	/* Para dispositivos móviles muy pequeños (como iPhone SE) */
 	.titulo h1,
-	h5 {
+	.titulo h5 {
 		font-size: 3rem;
 		word-break: break-all; /* Fuerza el salto de línea en cualquier punto de la palabra */
 		width: 100%;
 	}
 
-	.titulo span {
+	.titulo h1 span {
 		font-size: 4rem;
 	}
+	.titulo h5 span {
+		font-size: 3rem;
+	}
 
-	.doble_altura iframe {
+	iframe {
 		height: 170vh; /* Ocupa el 200% de la altura del viewport en pantallas pequeñas */
 	}
 }
