--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,8 @@
 :root {
 	/* Alturas */
+	--fuente-primaria: "Montserrat", serif;
+	--fuente-secondaria: "Roboto", sans-serif;
+	--fuente-terciaria: "Playwrite US Trad", cursive;
 	--altura-completa: 100%;
 	--altura-contenido: 70rem;
 	--altura-grande: 80vh;
@@ -31,20 +34,18 @@
 	--color-navbar: #00ffff9a;
 	--color-hover: #00ffff;
 	--color-menu-principal: #00e5ee;
-	--color-menu-principal-secundario: #c0c0c0;
+	--color-menu-principal-secundario: #ffffff;
 	--color-principal: #007bff;
-	--color-primertexto: #ffffff;
-	--color-segundotexto: #4cc654;
-	--color-subtitulo: #caf0f8;
+	--color-texto: #ffffff;
 	--color-titulo: #ffffff;
 	--color-titulo-grande: #ffffff;
 
 	/* Medidas textos */
-	--medida-texto: 2.1rem;
+	--medida-texto: 2.2rem;
 	--medida-texto-extra-grande: 3rem;
 	--medida-texto-extra-reducido: 0.6rem;
-	--medida-texto-grande: 2.4rem;
-	--medida-texto-mediano: 1.6rem;
+	--medida-texto-grande: 2.5rem;
+	--medida-texto-mediano: 1.8rem;
 	--medida-texto-reducido: 1rem;
 
 	/* Medidas títulos */
@@ -52,7 +53,7 @@
 	--medida-titulo-extra-grande: 8rem;
 	--medida-titulo-extra-reducido: 0.5rem;
 	--medida-titulo-grande: 7rem;
-	--medida-titulo-mediano: 2.5rem;
+	--medida-titulo-mediano: 4.5rem;
 	--medida-titulo-reducido: 3rem;
 
 	/* Márgenes */
