--- a/secciones/contacto/contacto.css
+++ b/secciones/contacto/contacto.css
@@ -4,6 +4,7 @@
 
 /* Estilo general para la sección de contacto */
 .contact {
+	font-size: var(--medida-texto);
 	padding: 2rem;
 	text-align: center; /* Alinea el contenido al centro */
 }
