--- a/secciones/sobre_mi/sobre_mi.css
+++ b/secciones/sobre_mi/sobre_mi.css
@@ -2,6 +2,7 @@
 
 /* .about-box: Contenedor de la sección "Acerca de" */
 .about-box {
+	padding: 2rem 2rem;
 	color: var(--color-texto);
 	display: flex;
 	flex-wrap: wrap;
