--- a/styles/util/fuentes_textos.css
+++ b/styles/util/fuentes_textos.css
@@ -13,7 +13,8 @@
 	font-family: "Roboto Condensed", sans-serif;
 	font-optical-sizing: auto;
 	font-style: normal;
-	font-weight: 200;
+	font-weige: normal;
+	font-weight: 400;
 }
 
 .playwrite-us-trad-u {
@@ -22,7 +23,6 @@
 	font-style: normal;
 	font-weight: 400;
 }
-
 .roboto-thin {
 	font-family: "Roboto", sans-serif;
 	font-style: normal;
@@ -223,4 +223,8 @@
 	font-size: var(--medida-texto-mediano);
 	color: var(--color-paleta--principal3);
 	margin-bottom: var(--margen-mediano);
+}
+
+.texto {
+	font-size: var(--medida-texto);
 }
