--- a/styles/general.css
+++ b/styles/general.css
@@ -6,13 +6,6 @@ html {
 	text-align: center;
 }
 
-html[data-theme="dark-theme"] {
-	background-image: url(./images/background/bk.jpg);
-
-	color: var(--color-texto), #ffffff;
-	text-align: center;
-}
-
 * {
 	box-sizing: border-box;
 	margin: 0;
@@ -25,7 +18,7 @@ html[data-theme="dark-theme"] {
 
 body[data-theme="dark-theme"] {
 	background-image: url(../images/background/bk.jpg);
-	font-size: var(--size-titulo);
+	font-size: var(--medida-texto);
 	color: var(--color-texto), #f0f3f6;
 	text-align: center;
 }
@@ -45,7 +38,7 @@ body {
 	background-image: url(../images/background/bk.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
-	color: var(--color-titulo);
+	color: var(--color-texto);
 	font-family: var(--fuente-primaria), var(--fuente-secundaria);
 
 	font-weight: 400;
@@ -96,8 +89,7 @@ footer {
 
 iframe {
 	width: 100%;
-	min-height: 90vh;
-
+	display: flex;
 	margin-top: 2rem;
 	overflow: hidden;
 	box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 2px 2px 2px rgba(0, 0, 0, 0.1);
