--- a/secciones/habilidades/habilidades.css
+++ b/secciones/habilidades/habilidades.css
@@ -5,31 +5,25 @@
 /* Estilo para la sección de trabajos */
 
 .other-skills-list {
-	min-height: 70vh;
 	list-style: none;
 	text-align: center;
 	padding: 0;
 	transition: all 3s;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	align-items: center;
-	font-size: var(--medida-texto-reducido);
 }
 
 .other-skills-item {
+	display: flex;
+	align-items: center;
 	gap: 1rem;
-	max-width: 80%;
+	margin: 1rem 2rem;
 	opacity: 0;
 	transform: translateX(-20px);
 	transition: all 2s ease;
 	text-align: center;
-	font-size: var(--medida-texto-mediano);
 }
 
 .other-skills-item:hover {
 	transform: translateX(0);
-	color: var(--color-texto);
 	opacity: 1;
 	background-color: var(--color-hover);
 }
@@ -55,5 +49,5 @@
 }
 
 .other-skills-icon {
-	color: var(--color-texto);
+	color: var(--color-primary);
 }
