--- a/secciones/proyectos/proyectos.css
+++ b/secciones/proyectos/proyectos.css
@@ -1,9 +1,9 @@
 @import url("../../styles/variables.css");
 /* Estilos generales para la sección de proyectos */
 .contenedor__proyectos {
+	max-width: 100%;
 	margin: 0 auto; /* Centra el contenedor */
 	padding: 2rem;
-	font-size: var(--medida-texto);
 }
 
 .proyectos__grid {
@@ -20,7 +20,6 @@
 	border-radius: var(--borde-reducido);
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 	overflow: hidden;
-	height: 40rem;
 	transition: box-shadow 0.3s ease;
 	background: linear-gradient(
 		18deg,
@@ -29,12 +28,12 @@
 		var(--color-paleta-principal3, rgba(4, 37, 78, 1)) 60%,
 		var(--color-paleta-principal4, rgba(1, 14, 18, 0.2))
 	);
-	/* Ajusta la altura según el contenido */
+	background-color: var(--color-background, #fff);
+	height: auto; /* Ajusta la altura según el contenido */
 }
 
 .proyecto:hover {
 	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-	background-color: var(--color-hover);
 }
 
 /* Estilo para el título del proyecto */
@@ -46,7 +45,7 @@
 
 /* Estilo para la imagen del proyecto */
 .proyecto__img {
-	width: 35%;
+	width: 50%;
 	height: auto;
 	border-bottom: 1px solid var(--color-border, #ccc);
 	border-radius: var(--borde-grande);
@@ -62,7 +61,7 @@
 	max-height: 10rem; /* Ajusta la altura máxima */
 	overflow: hidden;
 	transition: max-height 0.5s ease;
-	color: var(--color-texto);
+	color: var(--color-primertexto);
 	text-align: justify;
 	width: 100%;
 	margin-top: 1rem; /* Añade margen superior */
