--- a/secciones/sobre_mi/sobre_mi.css
+++ b/secciones/sobre_mi/sobre_mi.css
@@ -2,14 +2,12 @@
 
 /* .about-box: Contenedor de la sección "Acerca de" */
 .about-box {
-	padding: 2rem 2rem;
-	color: var(--color-texto);
+	color: var(--color-primertexto);
 	display: flex;
 	flex-wrap: wrap;
 	gap: 1rem;
 	align-items: stretch;
 	text-shadow: 1px 1px 1px var(--color-paleta-principal5);
-	font-size: var(--medida-texto);
 }
 
 /* .about-column: Información Personal */
@@ -115,7 +113,7 @@
 
 /* .about-box: Contenedor de la sección "Acerca de" */
 .about-box {
-	color: var(--color-texto);
+	color: var(--color-primertexto);
 	display: flex;
 	flex-wrap: wrap;
 	gap: 1rem;
