--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,4 @@
 @import url("./variables.css");
-@import url("./contenedores/contenedores.css");
 @import url("./util/fuentes_textos.css");
 @import url("./util/colores.css");
 @import url("./modulos/botones.css");
@@ -7,12 +6,15 @@
 @import url("./test_y_fase_beta/TEST-README-2024-08-07.css");
 @import url("./util/animaciones.css");
 
+@import url("https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&display=swap");
+
 /* Otros estilos */
 .column {
 	flex: 1;
 	margin: 1rem;
 }
 
+.proyectos,
 .bi {
 	display: flex;
 	flex-wrap: nowrap;
