--- a/styles/util/fuentes_textos.css
+++ b/styles/util/fuentes_textos.css
@@ -13,8 +13,7 @@
 	font-family: "Roboto Condensed", sans-serif;
 	font-optical-sizing: auto;
 	font-style: normal;
-	font-weige: normal;
-	font-weight: 400;
+	font-weight: 200;
 }
 
 .playwrite-us-trad-u {
@@ -23,6 +22,7 @@
 	font-style: normal;
 	font-weight: 400;
 }
+
 .roboto-thin {
 	font-family: "Roboto", sans-serif;
 	font-style: normal;
@@ -177,7 +177,14 @@
 }
 
 /* Clase para texto atractivo */
-
+.texto-atractivo {
+	color: var(--color-titulo); /* Color del texto */
+	text-shadow: 0 0 10px var(--color-paleta-principal1),
+		/* Sombra de texto */ 0 0 20px var(--color-paleta-principal1),
+		0 0 30px var(--color-paleta-principal2), 0 0 40px var(--color-paleta-principal2),
+		0 0 50px var(--color-paleta-principal2), 0 0 60px var(--color-paleta-principal1),
+		0 0 70px var(--color-paleta-principal6);
+}
 .heroe {
 	display: flex;
 	justify-content: center;
@@ -223,8 +230,4 @@
 	font-size: var(--medida-texto-mediano);
 	color: var(--color-paleta--principal3);
 	margin-bottom: var(--margen-mediano);
-}
-
-.texto {
-	font-size: var(--medida-texto);
 }
